--- a/style.css
+++ b/style.css
@@ -16,12 +16,16 @@
   margin: 0;
   padding: 0;
 }
+html{
+overflow-x: hidden;
+}
 body {
   font-family: Arial, sans-serif;
   background: var(--bg);
   color: var(--text);
   padding: 20px;
   transition: background 0.3s, color 0.3s;
+  overflow-x: hidden;
 }
 
 /* ——— Header (switch + select + botón) ——— */
